--- a/conf/application.conf
+++ b/conf/application.conf
@@ -88,23 +88,6 @@ play.i18n {
   #langCookieHttpOnly = true
 }
 
-## Filters
-# https://www.playframework.com/documentation/latest/ScalaHttpFilters
-# https://www.playframework.com/documentation/latest/JavaHttpFilters
-# ~~~~~
-# Filters run code on every request. They can be used to perform
-# common logic for all your actions, e.g. adding common headers.
-#
-play.filters {
-
-  # Enabled filters are run automatically against Play.
-  # CSRFFilter, AllowedHostFilters, and SecurityHeadersFilters are enabled by default.
-  enabled += filters.ExampleFilter
-
-  # Disabled filters remove elements from the enabled list.
-  #disabled += filters.ExampleFilter
-}
-
 ## Play HTTP settings
 # ~~~~~
 play.http {
@@ -221,30 +204,24 @@ play.cache {
   #bindCaches = ["db-cache", "user-cache", "session-cache"]
 }
 
-## Filters
+## Filter Configuration
+# https://www.playframework.com/documentation/latest/Filters
 # https://www.playframework.com/documentation/latest/ScalaHttpFilters
 # https://www.playframework.com/documentation/latest/JavaHttpFilters
 # ~~~~~
 # Filters run code on every request. They can be used to perform
 # common logic for all your actions, e.g. adding common headers.
-#
-play.filters {
-
-  # Enabled filters are run automatically against Play.
-  # CSRFFilter, AllowedHostFilters, and SecurityHeadersFilters are enabled by default.
-  enabled += filters.ExampleFilter
-
-  # Disabled filters remove elements from the enabled list.
-  #disabled += filters.ExampleFilter
-}
-
-## Filter Configuration
-# https://www.playframework.com/documentation/latest/Filters
-# ~~~~~
 # There are a number of built-in filters that can be enabled and configured
 # to give Play greater security.
 #
 play.filters {
+  # Enabled filters are run automatically against Play.
+  # CSRFFilter, AllowedHostFilters, and SecurityHeadersFilters are enabled by default.
+  # enabled += filters.ExampleFilter
+
+  # Disabled filters remove elements from the enabled list.
+  #disabled += filters.ExampleFilter
+
   ## CORS filter configuration
   # https://www.playframework.com/documentation/latest/CorsFilter
   # ~~~~~
